--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "paypal-rest-sdk": "^1.8.1",
     "playwright": "^1.41.2",
     "puppeteer": "^22.0.0",
+    "request-ip": "^3.3.0",
     "socket.io": "^4.0.0",
     "url": "^0.11.3",
     "util": "^0.12.3"
