--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "request-ip": "^3.3.0",
     "socket.io": "^4.0.0",
     "url": "^0.11.3",
-    "util": "^0.12.3"
+    "util": "^0.12.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
